# braintrust-llm-gateway

./: .env.example  .gitignore  README.md  modal_app.py  pyproject.toml  ruff.toml
docs/plans/: 2025-11-13-custom-llm-gateway-design.md
src/llm_gateway/: auth.py  config.py  main.py  models.py
tests/: test_auth.py  test_config.py  test_integration.py  test_main.py  test_models.py
